[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "recursive-unzip-tool"
version = "0.1.0"
description = "A modern GUI tool for recursively extracting archives in a target directory."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.9",
    "py7zr>=1.0",
]

[project.scripts]
recursive-unzip-tool = "recursive_unzip_tool.gui:main"

[tool.setuptools]
packages = ["recursive_unzip_tool"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
